# skill-refine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/reference/git-commit-writer/: SKILL.md
examples/reference/pdf-form-filler/: SKILL.md
examples/skills/: bad-skill.md  good-skill.md  minimal-skill.md
src/skill_refine/: __init__.py  textdiff.py
src/skill_refine/analysis/: checker.py  scorer.py  smells.py
src/skill_refine/cli/: check.py  improve.py  main.py  report.py  restore.py
src/skill_refine/core/: config.py  llm.py  models.py  parser.py  sections.py  tokens.py
src/skill_refine/lint/: __init__.py  checker.py  discovery.py  engine.py  models.py  parser.py  profiles.py  scorer.py  sections.py  serialize.py  smells.py  tokens.py
src/skill_refine/llm/: __init__.py  client.py  critique.py  guard.py  models.py
src/skill_refine/llm/providers/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  stub.py
src/skill_refine/llm/refine/: __init__.py  generator.py  patcher.py  rewriter.py
src/skill_refine/providers/: anthropic.py  factory.py  ollama.py  stub.py
src/skill_refine/refine/: differ.py  generator.py  patcher.py  rewriter.py
src/skill_refine/safety/: backup.py  guard.py
tests/: conftest.py  test_textdiff.py
tests/fixtures/reference_skills/: NOTICE
tests/test_analysis/: test_checker.py  test_scorer.py  test_smells.py
tests/test_cli/: test_cli.py  test_report.py  test_restore.py
tests/test_core/: test_parser.py  test_sections.py
tests/test_lint/: test_calibration.py  test_checker.py  test_discovery.py  test_engine.py  test_offline_isolation.py  test_parser.py  test_profiles.py  test_scorer.py  test_sections.py  test_serialize.py  test_smells.py
tests/test_llm/: test_factory.py  test_guard.py  test_patcher.py
tests/test_providers/: test_factory.py
tests/test_refine/: test_differ.py  test_patcher.py
tests/test_safety/: test_backup.py  test_guard.py
