[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-refine"
version = "0.1.0"
description = "Local-first static analysis and refinement engine for agent skill files"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "skills",
    "agents",
    "llm",
    "markdown",
    "linting",
    "static-analysis",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
    "python-frontmatter>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39"]
all = ["anthropic>=0.39"]

[project.urls]
Repository = "https://github.com/LAKITALKS/skill-refine"

[project.scripts]
skill-refine = "skill_refine.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_refine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
