[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-refine"
dynamic = ["version"]
description = "Standard-aligned linter and optional refiner for Agent Skills (SKILL.md)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "skills",
    "agents",
    "llm",
    "markdown",
    "linting",
    "static-analysis",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
# Core install is offline and dependency-clean: the deterministic lint core
# (skill_refine.lint) never imports httpx or anthropic. Those live in extras.
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
    "python-frontmatter>=1.0",
]

[project.optional-dependencies]
llm = ["httpx>=0.27"]
ollama = ["httpx>=0.27"]
anthropic = ["anthropic>=0.39", "httpx>=0.27"]
all = ["anthropic>=0.39", "httpx>=0.27"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.urls]
Repository = "https://github.com/LAKITALKS/skill-refine"

[project.scripts]
skill-refine = "skill_refine.cli.main:app"

[tool.hatch.version]
path = "src/skill_refine/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_refine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
